--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
 #    username: "user"
 #    password: "password"
 #    driver-class-name: "org.postgresql.Driver"
+#    enabled: true
 
 kafka:
   bootstrap-server: "http://localhost:9092"
